--- a/src/main/webapp/app/admin/user-management/user-management-dialog.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management-dialog.component.html
@@ -38,6 +38,23 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="form-control-label" for="password" jhiTranslate="global.form.newpassword">New password</label>
+            <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
+                   placeholder="{{'global.form.newpassword.placeholder' | translate}}"
+                   [(ngModel)]="user.password" minlength=4 maxlength=50 >
+            <div *ngIf="passwordInput.dirty && passwordInput.invalid">
+                <small class="form-text text-danger"
+                   *ngIf="passwordInput.errors.minlength" jhiTranslate="global.messages.validate.newpassword.minlength">
+                    Your password is required to be at least 4 characters.
+                </small>
+                <small class="form-text text-danger"
+                   *ngIf="passwordInput.errors.maxlength" jhiTranslate="global.messages.validate.newpassword.maxlength">
+                    Your password cannot be longer than 50 characters.
+                </small>
+            </div>
+            <jhi-password-strength-bar [passwordToCheck]="user.password"></jhi-password-strength-bar>
+        </div>
+        <div class="form-group">
             <label class="form-control-label" jhiTranslate="userManagement.firstName">First Name</label>
             <input type="text" class="form-control" name="firstName" #firstNameInput="ngModel"
                    [(ngModel)]="user.firstName" maxlength="50">
